updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>You've Arrived!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born in California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>music, travel, videogames, books, languages (human and computer), hiking, geography, history</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd love to become a freelance developer one day</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Tempe, Arizona</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Languages fascinate me; after working in the web hosting industry, it became clear that I wanted to learn code. </p>
     </section>
 
     <footer id="footer">
